# McCAD-FreeCAD

./: CMakeLists.txt  Init.py  InitGui.py  McCad.dox  README.md
App/: AppMcCad.cpp  CMakeLists.txt  CreateBox.cpp  CreateBox.h  CreateBox.py  McCadAppData.cpp  McCadAppData.h  McCadConversion.cpp  McCadConversion.h  McCadData.cpp  McCadData.h  McCadDataManager.cpp  McCadDataManager.h  McCadDocObserver.cpp  McCadDocObserver.h  McCadMessager_Signal.cpp  McCadMessager_Signal.h  McCadSurfaceCard.cpp  McCadSurfaceCard.h  PreCompiled.h
App/Convertor/: IGeomFace.hxx  IMcCadWriter.hxx  McCadAddAstSurface.cxx  McCadAddAstSurface.hxx  McCadCombSurfaces.cxx  McCadConvexSolid.cxx  McCadConvexSolid.hxx  McCadExtAstFace.cxx  McCadExtAstFace.hxx  McCadExtBndFace.cxx  McCadExtBndFace.hxx  McCadExtFace.cxx  McCadExtFace.hxx  McCadGeomCone.cxx  McCadGeomCone.hxx  McCadGeomCylinder.cxx  McCadGeomCylinder.hxx  McCadGeomData.cxx  McCadGeomData.hxx  McCadGeomPlane.cxx  McCadGeomPlane.hxx  McCadGeomRevolution.cxx  McCadGeomRevolution.hxx  McCadGeomSphere.cxx  McCadGeomSphere.hxx  McCadGeomTorus.cxx  McCadGeomTorus.hxx  McCadMcnpWriter.cxx  McCadMcnpWriter.hxx  McCadSolid.cxx  McCadSolid.hxx  McCadStitchSurfaces.cxx  McCadTriangle.hxx  McCadTripoliWriter.cxx  McCadTripoliWriter.hxx  McCadVoidCell.cxx  McCadVoidCell.hxx  McCadVoidCellManager.cxx  McCadVoidCellManager.hxx  McCadVoidGenerator.cxx  (+1 more)
App/Decompose/: McCadBndSurfCone.cxx  McCadBndSurfCone.hxx  McCadBndSurfCylinder.cxx  McCadBndSurfPlane.cxx  McCadBndSurfSphere.cxx  McCadBndSurfSphere.hxx  McCadDcompSolid.cxx  McCadDcompSolid.hxx  McCadDecompose.cxx  McCadEdge.cxx  McCadEdge.hxx  McCadEdgeHyperbola.cxx  McCadEdgeHyperbola.hxx  McCadEdgeParabola.cxx  McCadEdgeParabola.hxx  McCadEdgeSpline.hxx  McCadSplitConeCone.cxx  McCadSplitConeCone.hxx  McCadSplitConeCyln.cxx  McCadSplitConeCyln.hxx  McCadSplitConePln.cxx  McCadSplitConePln.hxx  McCadSplitCylinders.cxx  McCadSplitCylnPln.cxx  McCadSplitSphereCurveSurf.cxx  McCadSplitSphereCurveSurf.hxx
App/Material/: Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h
App/Python_SRC/: CheckSurf.py  CheckSurf.ui  CheckSurfPanel.ui  HideSolids.py  LostParticle.py  LostParticlePanel.ui  MergeFiles.py  MergeFilesPanel.ui  Paths.py  SelSurf.py  ShowSelection.py  TaskPanel.py  Visibility.py  ui_LostParticle.py
App/Tools/: McCadConvertConfig.cxx  McCadConvertConfig.hxx  McCadEvaluator.cxx  McCadEvaluator.hxx  McCadGeneTool.cxx  McCadGeomTool.cxx  McCadGeomTool.hxx  McCadInputModelData.cxx  McCadInputModelData.hxx  McCadMathTool.cxx
Gui/: AppMcCadGui.cpp  CMakeLists.txt  Command.cpp  ConfigDlg.cpp  ConfigDlg.h  ConvertorDlg.cpp  ConvertorDlg.h  DlgQSS.qss  MatDlg.cpp  MatDlg.h  MatEditorDlg.cpp  MatEditorDlg.h  McCadComboDelegate.cpp  McCadComboDelegate.h  McCadConvertorDlg.cpp  McCadConvertorDlg.h  McCadExporter.cpp  McCadExporter.h  McCadLostParticle.cpp  McCadLostParticle.h  McCadSettingDlg.cpp  McCadSettingDlg.h  McCadSurfaceCard.cpp  McCadSurfaceCard.h  McCadUtils.cpp  McCadUtils.h  PreCompiled.h  Workbench.cpp  Workbench.h  WorkingSpaceDlg.cpp  WorkingSpaceDlg.h  ui_Config.h  ui_Convertor.h  ui_Exporter.h  ui_LostParticle.h  ui_MatEditorDlg.h  ui_Setting.h  ui_WorkingSpaceDlg.h
Gui/Resources/: McCad.qrc
